@startuml
left to right direction

class Orange {
  - state : State
  + Orange()
  + getState() : State
  + runProcess() : void
  - doWork() : void
}

enum State {
  Fetched
  Peeled
  Squeezed
  Bottled
  Processed
  --
  - finalIndex : int
  - timeToComplete : int
  + getNext() : State
}

class Plant {
  + PROCESSING_TIME : long
  - NUM_PLANTS : int
  - NUM_WORKERS : int
  + ORANGES_PER_BOTTLE : int
  - thread : Thread
  - orangesProvided : int
  - orangesProcessed : int
  - timeToWork : boolean
  - mailbox : BlockingMailbox
  - workers : Worker[]
  --
  + startPlant() : void
  + stopPlant() : void
  + waitToStop() : void
  + run() : void
  + incrementProcessed() : void
  + getProvidedOranges() : int
  + getProcessedOranges() : int
  + getBottles() : int
  + getWaste() : int
  + getThreadName() : String
}

class Worker {
  - thread : Thread
  - plant : Plant
  - mailbox : BlockingMailbox
  - timeToWork : boolean
  --
  + startWorker() : void
  + stopWorker() : void
  + waitToStop() : void
  + run() : void
}

class BlockingMailbox {
  - orange : Orange
  --
  + put(o : Orange) : void
  + get() : Orange
  + isEmpty() : boolean
}

Orange --> State
BlockingMailbox "1" o-- "1" Orange
Plant "1" *-- "1" BlockingMailbox
Plant "1" *-- "*" Worker
Worker --> BlockingMailbox
Worker --> Plant
Plant --> Orange
Worker --> Orange

@enduml